2017-08-21 Franz Holzinger <franz@fholzinger.com>
    * new feature: processScript can be a namespace classname of a class joined with a method function

2017-07-27 Franz Holzinger <franz@fholzinger.com>
    * support for TYPO3 8.7.4
    * remove in TYPO3 8 deprecated check for checkFileInclude in order to allow php files outside of the TYPO3 directories ext and sysext, typo3conf/ext

2016-08-02 Franz Holzinger <franz@fholzinger.com>
	* support for TYPO3 7.6.10
	* remove MAIL feature
	* use much code from TYPO3 7.6.10 system extension compatibility6

2014-10-21 Franz Holzinger <franz@fholzinger.com>
	* Initial TER upload